Add getUsers route
