# helper/GetUsers.go
@@ -1,0 +1,5 @@
+package helper
+
+func GetUsers() {
+
+}
