# models/users_response.go
@@ -1,0 +1,27 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/strfmt"
+)
+
+// UsersResponse users response
+//
+// swagger:model UsersResponse
+type UsersResponse []string
+
+// Validate validates this users response
+func (m UsersResponse) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// ContextValidate validates this users response based on context it is used
+func (m UsersResponse) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
